refactor: simplify file management by removing folder functionality
- Remove folder creation UI components and related JavaScript functions
- Simplify file upload by removing owner ID requirement
- Update LDAP image from bitnami/openldap to symas/openldap
- Streamline file browser to display files only without folder hierarchy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,7 +107,7 @@ services:
       - employee-network
 
   ldap-server:
-    image: bitnami/openldap:2.6.10-debian-12-r3
+    image: symas/openldap:2.6.8-3
     container_name: ldap-server
     environment:
       - LDAP_ROOT=dc=strongsystem,dc=local
