--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,8 @@ services:
       - LDAP_LOGLEVEL=256
       - LDAP_PASSWORD_HASH={CLEARTEXT}
       - LDAP_SKIP_DEFAULT_TREE=no
+    ports:
+      - "389:1389"  # LDAP
     volumes:
       - ldap-data:/bitnami/openldap
     networks:
