refactor: Day 3 CDK structure to represent Day 2 completion state
- Rename Day3Stack to Day2Stack (represents Day 2 hands-on completion)
- Remove lib/day3-stack.ts (252 lines)
- Update package.json: name, description, bin entry point to day3-cdk
- Day 3 CDK now provides Day 2 complete infrastructure as starting point

--- a/docs/day3/cdk/package.json
+++ b/docs/day3/cdk/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "day2-cdk",
+  "name": "day3-cdk",
   "version": "1.0.0",
-  "description": "Day 1 complete infrastructure for Day 2 hands-on",
+  "description": "Day 2 complete infrastructure for Day 3 hands-on starting point",
   "bin": {
-    "day2-cdk": "bin/day2-cdk.js"
+    "day3-cdk": "bin/day3-cdk.js"
   },
   "scripts": {
     "build": "tsc",
