--- a/docs/day4/cdk/cf/template.yaml
+++ b/docs/day4/cdk/cf/template.yaml
@@ -122,37 +122,6 @@ Resources:
     DeletionPolicy: Delete
     Metadata:
       aws:cdk:path: Day4Stack-test/FilesBucket/Resource
-  FilesBucketPolicy8CA19688:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket:
-        Ref: FilesBucket16450113
-      PolicyDocument:
-        Statement:
-        - Action:
-          - s3:DeleteObject*
-          - s3:GetBucket*
-          - s3:List*
-          - s3:PutBucketPolicy
-          Effect: Allow
-          Principal:
-            AWS:
-              Fn::GetAtt:
-              - CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092
-              - Arn
-          Resource:
-          - Fn::GetAtt:
-            - FilesBucket16450113
-            - Arn
-          - Fn::Join:
-            - ''
-            - - Fn::GetAtt:
-                - FilesBucket16450113
-                - Arn
-              - /*
-        Version: '2012-10-17'
-    Metadata:
-      aws:cdk:path: Day4Stack-test/FilesBucket/Policy/Resource
   ApiFunctionServiceRole52B9747B:
     Type: AWS::IAM::Role
     Properties:
@@ -1455,27 +1424,6 @@ Resources:
         Ref: WebsiteBucket75C24D94
       PolicyDocument:
         Statement:
-        - Action:
-          - s3:DeleteObject*
-          - s3:GetBucket*
-          - s3:List*
-          - s3:PutBucketPolicy
-          Effect: Allow
-          Principal:
-            AWS:
-              Fn::GetAtt:
-              - CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092
-              - Arn
-          Resource:
-          - Fn::GetAtt:
-            - WebsiteBucket75C24D94
-            - Arn
-          - Fn::Join:
-            - ''
-            - - Fn::GetAtt:
-                - WebsiteBucket75C24D94
-                - Arn
-              - /*
         - Action: s3:GetObject
           Condition:
             StringEquals:
@@ -1610,4 +1558,4 @@ Outputs:
 Parameters:
   LambdaCodeBucket:
     Type: String
-    Description: S3 bucket containing Lambda deployment packages (api.zip, seed.zip)
+    Description: S3 bucket containing Lambda deployment packages (api.zip)
