--- a/docs/day4/cdk/cf/template-academy.yaml
+++ b/docs/day4/cdk/cf/template-academy.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Day4 Serverless Stack for AWS Academy (Lambda Function URL + CloudFront)
+Description: Day4 Serverless Stack for AWS Academy Learner Lab (S3 Website Hosting)
 
 Parameters:
   LabRoleArn:
@@ -10,7 +10,6 @@ Parameters:
     Description: S3 bucket containing api-academy.zip
 
 Resources:
-  # DynamoDB Tables
   EmployeeTable:
     Type: AWS::DynamoDB::Table
     Properties:
@@ -35,13 +34,11 @@ Resources:
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
 
-  # S3 Bucket for file uploads
   FilesBucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub 'day4-files-${AWS::AccountId}'
 
-  # Lambda Function with Function URL (replaces API Gateway)
   ApiFunction:
     Type: AWS::Lambda::Function
     Properties:
@@ -81,15 +78,18 @@ Resources:
       Principal: '*'
       FunctionUrlAuthType: NONE
 
-  # S3 Bucket for static website (frontend)
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
+      BucketName: !Sub 'day4-website-${AWS::AccountId}'
       PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
+        BlockPublicAcls: false
+        BlockPublicPolicy: false
+        IgnorePublicAcls: false
+        RestrictPublicBuckets: false
+      WebsiteConfiguration:
+        IndexDocument: index.html
+        ErrorDocument: index.html
 
   WebsiteBucketPolicy:
     Type: AWS::S3::BucketPolicy
@@ -99,63 +99,17 @@ Resources:
         Version: '2012-10-17'
         Statement:
           - Effect: Allow
+            Principal: '*'
             Action: s3:GetObject
-            Principal:
-              Service: cloudfront.amazonaws.com
             Resource: !Sub '${WebsiteBucket.Arn}/*'
-            Condition:
-              StringEquals:
-                AWS:SourceArn: !Sub 'arn:${AWS::Partition}:cloudfront::${AWS::AccountId}:distribution/${Distribution}'
-
-  # CloudFront Distribution
-  OriginAccessControl:
-    Type: AWS::CloudFront::OriginAccessControl
-    Properties:
-      OriginAccessControlConfig:
-        Name: !Sub 'day4-oac-${AWS::StackName}'
-        OriginAccessControlOriginType: s3
-        SigningBehavior: always
-        SigningProtocol: sigv4
-
-  Distribution:
-    Type: AWS::CloudFront::Distribution
-    Properties:
-      DistributionConfig:
-        Comment: Day 4 CloudFront Distribution for AWS Academy
-        Enabled: true
-        HttpVersion: http2
-        IPV6Enabled: true
-        DefaultRootObject: index.html
-        CustomErrorResponses:
-          - ErrorCode: 404
-            ResponseCode: 200
-            ResponsePagePath: /index.html
-            ErrorCachingMinTTL: 300
-        DefaultCacheBehavior:
-          TargetOriginId: S3Origin
-          ViewerProtocolPolicy: redirect-to-https
-          AllowedMethods:
-            - GET
-            - HEAD
-          CachedMethods:
-            - GET
-            - HEAD
-          Compress: true
-          CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6
-        Origins:
-          - Id: S3Origin
-            DomainName: !GetAtt WebsiteBucket.RegionalDomainName
-            OriginAccessControlId: !GetAtt OriginAccessControl.Id
-            S3OriginConfig:
-              OriginAccessIdentity: ''
 
 Outputs:
   FunctionUrl:
     Description: Lambda Function URL (API endpoint)
     Value: !GetAtt ApiFunctionUrl.FunctionUrl
-  CloudFrontUrl:
-    Description: CloudFront Distribution URL (Frontend)
-    Value: !Sub 'https://${Distribution.DomainName}'
+  WebsiteUrl:
+    Description: S3 Website URL (Frontend)
+    Value: !GetAtt WebsiteBucket.WebsiteURL
   WebsiteBucketName:
     Description: S3 Website Bucket Name (for frontend upload)
     Value: !Ref WebsiteBucket
