Simplify academy template: auto-generate LabRole ARN, remove manual input

--- a/docs/day4/cf/academy/template.yaml
+++ b/docs/day4/cf/academy/template.yaml
@@ -2,9 +2,6 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: Day4 Serverless Stack for AWS Academy Learner Lab (S3 Website Hosting)
 
 Parameters:
-  LabRoleArn:
-    Type: String
-    Description: ARN of the LabRole
   LambdaCodeBucket:
     Type: String
     Description: S3 bucket containing api.zip
@@ -62,7 +59,7 @@ Resources:
       Handler: index.handler
       MemorySize: 512
       Timeout: 30
-      Role: !Ref LabRoleArn
+      Role: !Sub 'arn:aws:iam::${AWS::AccountId}:role/LabRole'
       Code:
         S3Bucket: !Ref LambdaCodeBucket
         S3Key: api.zip
